PL-766 BUG: On small mobiles the bottom of the hamburger menu is cut-off
Using hardcoded max-height value for the mobile menu
Also using a long delay variable across the stylesheets

--- a/Boilerplate/src/sass/base/_vars.scss
+++ b/Boilerplate/src/sass/base/_vars.scss
@@ -1,5 +1,3 @@
-@import "../utils/mixins";
-
 // /*-------------------------------------------------.
 // \    Config: Grid debugging -
 //  `-------------------------------------------------*/
@@ -82,6 +80,7 @@ $dashed-border: dashed rgba(255, 255, 255, 0.5) 1px;
 
 // Animation delays;
 $delay--medium: 0.3s;
+$delay--long: 0.6s;
 
 // /*-------------------------------------------------.
 // \    Config: Typography
